some fixes